[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Nikita <nikkitos.pershin.2000@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^1.8.4"
pytest = "^8.3.3"


[tool.poetry.group.dep.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
